# ryde

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
challenge/: celery.py  settings.py  urls.py  wsgi.py
friendships/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
friendships/migrations/: 0001_initial.py
users/: admin.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_date_joined_remove_user_first_name_and_more.py
